--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -13,7 +13,8 @@
             height: 100%;
             background-color: #f0f0f0;
             color: #000;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: '
+            ', Courier, monospace;
         }
         .container {
             padding: 20px;
